# apd

./: ACCESS.md  README.md  play.py  pyproject.toml
.github/workflows/: checks.yaml
spd/: hooks.py  module_utils.py  plotting.py  run_spd.py  types.py  utils.py  wandb_utils.py
spd/experiments/bool_circuits/: bool_circuit_config.yaml  bool_circuit_dataset.py  bool_circuit_decomposition.py  bool_circuit_spd_config.yaml  bool_circuit_utils.py  handcode_bool_circuit.py  interp_bool_circuit.py  models.py  train_bool_circuit.py
spd/experiments/linear/: interpret.py  linear_config.yaml  linear_dataset.py  linear_decomposition.py  linear_lp_config.yaml  linear_match_param_config.yaml  linear_sweep_config.yaml  linear_topk_config.yaml  linear_topk_full_rank_config.yaml  linear_topk_match_param_config.yaml  models.py  plotting.py  train_linear.py
spd/experiments/mnist/: mnist_decomposition.py  mnist_sweep_config.yaml  mnist_topk_config.yaml  models.py  train_mnist.py
spd/experiments/piecewise/: demo_piecewise.py  interpret.py  models.py  piecewise_config.yaml  piecewise_dataset.py  piecewise_decomposition.py  piecewise_handcoded_topk_config.yaml  piecewise_lp_config.yaml  piecewise_multilayer_topk_config.yaml  piecewise_rank_penalty_config.yaml  piecewise_spd_config.yaml  piecewise_spd_handcoded_topk_config.yaml  piecewise_spd_topk_config.yaml  piecewise_sweep_config.yaml  piecewise_topk_config.yaml  piecewise_topk_full_rank_config.yaml  piecewise_topk_rank_one_config.yaml  piecewise_topk_sweep_config.yaml  plotting.py  spd_interp.py  trig_functions.py
spd/experiments/resid_linear/: interpret.py  models.py  resid_linear_dataset.py  resid_linear_decomposition.py  resid_linear_sweep_config.yaml  resid_linear_topk_full_rank_config.yaml  resid_linear_topk_rank_penalty_config.yaml  train_resid_linear.py
spd/experiments/resid_mlp/: anth_like_visualization.py  f100_resid_mlp_topk_rank_penalty_config.yaml  f20_resid_mlp_topk_rank_penalty_config.yaml  f50_resid_mlp_topk_rank_penalty_config.yaml  model_interp.py  models.py  plotting.py  resid_mlp_dataset.py  resid_mlp_decomposition.py  resid_mlp_sweep_config.yaml  resid_mlp_topk_config.yaml  resid_mlp_topk_rank_penalty_config.yaml  scaling_resid_mlp_training.py  spd_interp.py  sweepA_spd.yaml  sweepA_wandb.yaml  train_resid_mlp.py  train_x_plus_relu.py
spd/experiments/tms/: interpret.py  models.py  spd_interp.py  tms_decomposition.py  tms_lp_config.yaml  tms_lp_match_param_config.yaml  tms_sweep_config.yaml  tms_topk_config.yaml  tms_topk_full_rank_config.yaml  tms_topk_match_param_config.yaml  tms_topk_rank_penalty_config.yaml  tms_topk_sweep_config.yaml  train_tms.py  utils.py
spd/models/: __init__.py  base.py  bool_circuit_models.py  components.py  linear_models.py  piecewise_models.py  spd_models.py  tms_models.py
spd/scripts/: demo_PiecewiseFunctionTransformer.py  tms.py  tms_config.yaml  tms_decomposition.py  tms_decomposition_highdim.py  tms_match_param_config.yaml  tms_sweep_config.yaml  tms_untied_decomposition.py
spd/scripts/bool_circuits/: bool_circuit_dataset.py  bool_circuit_decomposition.py  bool_circuit_model.py  bool_circuit_spd_config.yaml  bool_circuit_utils.py  boolean_circuit.py  circuit_utils.py  demo_handcoding_gates.py  handcode_bool_circuit.py  interp_bool_circuit.py  models.py  train_bool_circuit.py
spd/scripts/linear/: linear_config.yaml  linear_dataset.py  linear_decomposition.py  linear_decomposition_topk.py  linear_match_param_config.yaml  linear_sweep_config.yaml  linear_topk_match_param_config.yaml  models.py  train_linear.py
spd/scripts/multilayer-functions/: multifunction_play.py  piecewise-linear.py  piecewise_linear.py
spd/scripts/multilayer_functions/: demo_PiecewiseFunctionTransformer.py  (+8 more)
tests/: test_linear.py  test_mlp.py  test_piecewise.py  test_piecewise_dataloader.py  test_piecwise.py  test_resid_linear.py  test_resid_mlp.py  test_spd.py  test_spd_losses.py  test_spd_model.py  test_tms.py  test_tms_decomposition.py  test_tms_decomposition_highdim.py  test_train_linear.py  test_train_tms.py  test_utils.py
weight_factors/: log.py  utils.py
weight_factors/scripts/: tms.py  tms_factors.py  tms_untied.py
(+28 files in other folders)
