[project]
name = "weight_factors"
version = "0.0.1"
description = "Sparse Factorization of Network Weights"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "torch~=2.2.0",
    "torchvision~=0.17.0",
    "pydantic~=2.0",
    "wandb~=0.16.2",
    "fire~=0.5.0",
    "tqdm~=4.66.1",
    "pytest~=8.1.2",
    "ipykernel~=6.29.0",
    "transformers~=4.41.2",
    "transformer-lens~=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.4.8",
    "pyright~=1.1.367",
    "pre-commit~=3.7.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["weight_factors", "weight_factors.models", "weight_factors.scripts"]

[tool.ruff]
line-length = 100
fix = true
ignore = [
    "F722" # Incompatible with jaxtyping
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["weight_factors", "tests"]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportFunctionMemberAccess = true
reportUnknownParameterType = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructorType = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportShadowedImports = true
reportPrivateImportUsage = false

[tool.pytest.ini_options]
filterwarnings = [
    # https://github.com/google/python-fire/pull/447
    "ignore::DeprecationWarning:fire:59",
]