[project]
name = "spd"
version = "0.0.1"
description = "Sparse Parameter Decomposition"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "torch",
    "torchvision",
    "pydantic",
    "wandb",
    "fire",
    "graphviz",
    "tqdm",
    "pytest",
    "ipykernel",
    "transformers",
    "transformer-lens",
    "matplotlib==3.9.1",  # Avoid frequent pyright errors with new matplotlib versions
    "numpy",
    "python-dotenv",
    "wandb",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["spd", "spd.models", "spd.experiments"]

[tool.ruff]
line-length = 100
fix = true
ignore = [
    "F722" # Incompatible with jaxtyping
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["spd", "tests"]

strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportFunctionMemberAccess = true
reportUnknownParameterType = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructorType = true
reportOverlappingOverload = true
reportConstantRedefinition = true
reportImportCycles = true
reportPropertyTypeMismatch = true
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnusedExpression = true
reportMatchNotExhaustive = true
reportShadowedImports = true
reportPrivateImportUsage = false
reportCallIssue = true

[tool.pytest.ini_options]
filterwarnings = [
    # https://github.com/google/python-fire/pull/447
    "ignore::DeprecationWarning:fire:59",
]